corrected a few fuzzy entries

--- a/whatsnew/3.5.po
+++ b/whatsnew/3.5.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2021-07-30 21:57+0100\n"
+"PO-Revision-Date: 2021-07-31 09:38+0100\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,7 +23,6 @@ msgstr ""
 "X-Generator: Poedit 3.0\n"
 
 #: ../Doc/whatsnew/3.5.rst:3
-#, fuzzy
 msgid "What's New In Python 3.5"
 msgstr "Novedades de Python 3.5"
 
@@ -32,99 +31,82 @@ msgid "Editors"
 msgstr "Editores"
 
 #: ../Doc/whatsnew/3.5.rst:5
-#, fuzzy
 msgid "Elvis Pranskevichus <elvis@magic.io>, Yury Selivanov <yury@magic.io>"
 msgstr "Elvis Pranskevichus <elvis@magic.io>, Yury Selivanov <yury@magic.io>"
 
 #: ../Doc/whatsnew/3.5.rst:47
-#, fuzzy
 msgid ""
 "This article explains the new features in Python 3.5, compared to 3.4. "
 "Python 3.5 was released on September 13, 2015.  See the `changelog <https://"
 "docs.python.org/3.5/whatsnew/changelog.html>`_ for a full list of changes."
 msgstr ""
 "Este artículo explica las nuevas características de Python 3.5, en "
-"comparación con la 3.4. Python 3.5 se publicó el 13 de septiembre de 2015.  "
+"comparación con  3.4. Python 3.5 fue lanzado el 13 de septiembre de 2015.  "
 "Consulta el `changelog <https://docs.python.org/3.5/whatsnew/changelog."
 "html>`_ para ver la lista completa de cambios."
 
 #: ../Doc/whatsnew/3.5.rst:54
-#, fuzzy
 msgid ":pep:`478` - Python 3.5 Release Schedule"
 msgstr ":pep:`478` - Calendario de lanzamiento de Python 3.5"
 
 #: ../Doc/whatsnew/3.5.rst:58
-#, fuzzy
 msgid "Summary -- Release highlights"
-msgstr "Resumen -- Puntos destacados de la publicación"
+msgstr "Resumen -- Puntos destacados del lanzamiento"
 
 #: ../Doc/whatsnew/3.5.rst:60
-#, fuzzy
 msgid "New syntax features:"
 msgstr "Nuevas características de sintaxis:"
 
 #: ../Doc/whatsnew/3.5.rst:62
-#, fuzzy
 msgid ""
 ":ref:`PEP 492 <whatsnew-pep-492>`, coroutines with async and await syntax."
 msgstr ""
-":ref:`PEP 492 <whatsnew-pep-492>`, coroutines con sintaxis async y await.</"
-"whatsnew-pep-492>"
+":ref:`PEP 492 <whatsnew-pep-492>`, corutinas con sintaxis async y await."
 
 #: ../Doc/whatsnew/3.5.rst:63
-#, fuzzy
 msgid ""
 ":ref:`PEP 465 <whatsnew-pep-465>`, a new matrix multiplication operator: ``a "
 "@ b``."
 msgstr ""
 ":ref:`PEP 465 <whatsnew-pep-465>`, un nuevo operador de multiplicación de "
-"matrices: ``a @ b``.</whatsnew-pep-465>"
+"matrices: ``a @ b``."
 
 #: ../Doc/whatsnew/3.5.rst:64
-#, fuzzy
 msgid ""
 ":ref:`PEP 448 <whatsnew-pep-448>`, additional unpacking generalizations."
 msgstr ""
 ":ref:`PEP 448 <whatsnew-pep-448>`, generalizaciones adicionales de "
-"desembalaje.</whatsnew-pep-448>"
+"desembalaje."
 
 #: ../Doc/whatsnew/3.5.rst:67
-#, fuzzy
 msgid "New library modules:"
 msgstr "Nuevos módulos de la biblioteca:"
 
 #: ../Doc/whatsnew/3.5.rst:69
-#, fuzzy
 msgid ":mod:`typing`: :ref:`PEP 484 -- Type Hints <whatsnew-pep-484>`."
-msgstr ""
-":mod:`typing`: :ref:`PEP 484 -- Type <whatsnew-pep-484>Hints`.</whatsnew-"
-"pep-484>"
+msgstr ":mod:`typing`: :ref:`PEP 484 -- Type Hints <whatsnew-pep-484>`."
 
 #: ../Doc/whatsnew/3.5.rst:70
-#, fuzzy
 msgid ""
 ":mod:`zipapp`: :ref:`PEP 441 Improving Python ZIP Application Support "
 "<whatsnew-zipapp>`."
 msgstr ""
 ":mod:`zipapp`: :ref:`PEP 441 Mejora del soporte de aplicaciones ZIP de "
-"<whatsnew-zipapp>Python`.</whatsnew-zipapp>"
+"Python <whatsnew-zipapp>`."
 
 #: ../Doc/whatsnew/3.5.rst:74
-#, fuzzy
 msgid "New built-in features:"
-msgstr "Nuevas funciones incorporadas:"
+msgstr "Nuevas funciones integradas:"
 
 #: ../Doc/whatsnew/3.5.rst:76
-#, fuzzy
 msgid ""
 "``bytes % args``, ``bytearray % args``: :ref:`PEP 461 <whatsnew-pep-461>` -- "
 "Adding ``%`` formatting to bytes and bytearray."
 msgstr ""
 "``bytes % args``, ``bytearray % args``: :ref:`PEP 461 <whatsnew-pep-461>` -- "
-"Añadir el formato ``%`` a bytes y bytearray.</whatsnew-pep-461>"
+"Añadir el formato ``%`` a bytes y bytearray."
 
 #: ../Doc/whatsnew/3.5.rst:79
-#, fuzzy
 msgid ""
 "New :meth:`bytes.hex`, :meth:`bytearray.hex` and :meth:`memoryview.hex` "
 "methods. (Contributed by Arnon Yaari in :issue:`9951`.)"
@@ -133,7 +115,6 @@ msgstr ""
 "hex`. (Contribuido por Arnon Yaari en :issue:`9951`.)"
 
 #: ../Doc/whatsnew/3.5.rst:82
-#, fuzzy
 msgid ""
 ":class:`memoryview` now supports tuple indexing (including multi-"
 "dimensional). (Contributed by Antoine Pitrou in :issue:`23632`.)"
@@ -142,18 +123,16 @@ msgstr ""
 "multidimensionales). (Contribuido por Antoine Pitrou en :issue:`23632`.)"
 
 #: ../Doc/whatsnew/3.5.rst:85
-#, fuzzy
 msgid ""
 "Generators have a new ``gi_yieldfrom`` attribute, which returns the object "
 "being iterated by ``yield from`` expressions. (Contributed by Benno Leslie "
 "and Yury Selivanov in :issue:`24450`.)"
 msgstr ""
-"Los generadores tienen un nuevo atributo ``gi_yieldfrom``, que devuelve el "
+"Los generadores tienen un nuevo atributo ``gi_yieldfrom``, que retorna el "
 "objeto iterado por las expresiones ``yield from``. (Contribución de Benno "
 "Leslie y Yury Selivanov en :issue:`24450`)"
 
 #: ../Doc/whatsnew/3.5.rst:89
-#, fuzzy
 msgid ""
 "A new :exc:`RecursionError` exception is now raised when maximum recursion "
 "depth is reached.  (Contributed by Georg Brandl in :issue:`19235`.)"
@@ -163,12 +142,10 @@ msgstr ""
 "`19235`.)"
 
 #: ../Doc/whatsnew/3.5.rst:94
-#, fuzzy
 msgid "CPython implementation improvements:"
 msgstr "Mejoras en la implementación de CPython:"
 
 #: ../Doc/whatsnew/3.5.rst:96
-#, fuzzy
 msgid ""
 "When the ``LC_TYPE`` locale is the POSIX locale (``C`` locale), :py:data:"
 "`sys.stdin` and :py:data:`sys.stdout` now use the ``surrogateescape`` error "
@@ -177,11 +154,10 @@ msgid ""
 msgstr ""
 "Cuando la localización ``LC_TYPE`` es la localización POSIX (localización "
 "``C``), :py:data:`sys.stdin` y :py:data:`sys.stdout` utilizan ahora el "
-"manejador de errores ``surrogateescape``, en lugar del manejador de errores "
+"gestor de errores ``surrogateescape``, en lugar del gestor de errores "
 "``strict``. (Contribuido por Victor Stinner en :issue:`19977`.)"
 
 #: ../Doc/whatsnew/3.5.rst:101
-#, fuzzy
 msgid ""
 "``.pyo`` files are no longer used and have been replaced by a more flexible "
 "scheme that includes the optimization level explicitly in ``.pyc`` name. "
@@ -189,11 +165,9 @@ msgid ""
 msgstr ""
 "Los archivos ``.pyo`` ya no se utilizan y han sido sustituidos por un "
 "esquema más flexible que incluye el nivel de optimización explícitamente en "
-"el nombre ``.pyc``. (Véase :ref:`PEP 488 <whatsnew-pep-488>overview`.)</"
-"whatsnew-pep-488>"
+"el nombre ``.pyc``. (Véase :ref:`PEP 488 <whatsnew-pep-488>overview`.)"
 
 #: ../Doc/whatsnew/3.5.rst:105
-#, fuzzy
 msgid ""
 "Builtin and extension modules are now initialized in a multi-phase process, "
 "which is similar to how Python modules are loaded. (See :ref:`PEP 489 "
@@ -201,81 +175,65 @@ msgid ""
 msgstr ""
 "Los módulos incorporados y las extensiones se inicializan ahora en un "
 "proceso de varias fases, que es similar a cómo se cargan los módulos de "
-"Python. (Véase :ref:`Previsión general de la PEP <whatsnew-pep-489>489`)</"
-"whatsnew-pep-489>"
+"Python. (Véase :ref:`Previsión general de la PEP 489 <whatsnew-pep-489>`)"
 
 #: ../Doc/whatsnew/3.5.rst:110
-#, fuzzy
 msgid "Significant improvements in the standard library:"
-msgstr "Mejoras significativas en la biblioteca estándar:"
+msgstr "Mejoras significativas en la  Biblioteca Estándar:"
 
 #: ../Doc/whatsnew/3.5.rst:112
-#, fuzzy
 msgid ""
 ":class:`collections.OrderedDict` is now :ref:`implemented in C <whatsnew-"
 "ordereddict>`, which makes it 4 to 100 times faster."
 msgstr ""
-":class:`collections.OrderedDict` es ahora :ref:`implementado en <whatsnew-"
-"ordereddict>C`, lo que lo hace de 4 a 100 veces más rápido.</whatsnew-"
-"ordereddict>"
+":class:`collections.OrderedDict` esta ahora :ref:`implementado en C "
+"<whatsnew-ordereddict>`, lo que lo hace de 4 a 100 veces más rápido."
 
 #: ../Doc/whatsnew/3.5.rst:116
-#, fuzzy
 msgid ""
 "The :mod:`ssl` module gained :ref:`support for Memory BIO <whatsnew-"
 "sslmemorybio>`, which decouples SSL protocol handling from network IO."
 msgstr ""
-"El módulo :mod:`ssl` ha ganado soporte :ref:`para Memory <whatsnew-"
-"sslmemorybio>BIO`, que desacopla el manejo del protocolo SSL de la red IO.</"
-"whatsnew-sslmemorybio>"
+"El módulo :mod:`ssl` ha ganado soporte :ref:`para Memory BIO <whatsnew-"
+"sslmemorybio>`, que desacopla el manejo del protocolo SSL de IO de red."
 
 #: ../Doc/whatsnew/3.5.rst:120
-#, fuzzy
 msgid ""
 "The new :func:`os.scandir` function provides a :ref:`better and "
 "significantly faster way <whatsnew-pep-471>` of directory traversal."
 msgstr ""
 "La nueva función :func:`os.scandir` proporciona una forma :ref:`mejor y "
-"significativamente más <whatsnew-pep-471>rápida` de recorrer los directorios."
-"</whatsnew-pep-471>"
+"significativamente másrápida <whatsnew-pep-471>` de recorrer los directorios."
 
 #: ../Doc/whatsnew/3.5.rst:124
-#, fuzzy
 msgid ""
 ":func:`functools.lru_cache` has been mostly :ref:`reimplemented in C "
 "<whatsnew-lrucache>`, yielding much better performance."
 msgstr ""
 ":func:`functools.lru_cache` ha sido mayoritariamente :ref:`reimplementado en "
-"<whatsnew-lrucache>C`, obteniendo un rendimiento mucho mejor.</whatsnew-"
-"lrucache>"
+"C <whatsnew-lrucache>`, obteniendo un rendimiento mucho mejor."
 
 #: ../Doc/whatsnew/3.5.rst:128
-#, fuzzy
 msgid ""
 "The new :func:`subprocess.run` function provides a :ref:`streamlined way to "
 "run subprocesses <whatsnew-subprocess>`."
 msgstr ""
-"La nueva función :func:`subprocess.run` proporciona una manera :ref: "
-"<whatsnew-subprocess>`streaming`</whatsnew-subprocess> de ejecutar "
-"subprocesos <whatsnew-subprocess>.</whatsnew-subprocess>"
+"La nueva función :func:`subprocess.run` proporciona una manera :ref: ` en "
+"streaming <whatsnew-subprocess>` de ejecutar subprocesos "
 
 #: ../Doc/whatsnew/3.5.rst:131
-#, fuzzy
 msgid ""
 "The :mod:`traceback` module has been significantly :ref:`enhanced <whatsnew-"
 "traceback>` for improved performance and developer convenience."
 msgstr ""
 "El módulo :mod:`traceback` se ha mejorado significativamente :ref: <whatsnew-"
-"traceback>`para mejorar el rendimiento y la comodidad del desarrollador.</"
-"whatsnew-traceback>"
+"traceback>`para mejorar el rendimiento y la conveniencia del desarrollador."
 
 #: ../Doc/whatsnew/3.5.rst:136
-#, fuzzy
 msgid "Security improvements:"
 msgstr "Mejoras en la seguridad:"
 
 #: ../Doc/whatsnew/3.5.rst:138
-#, fuzzy
 msgid ""
 "SSLv3 is now disabled throughout the standard library. It can still be "
 "enabled by instantiating a :class:`ssl.SSLContext` manually.  (See :issue:"
@@ -287,7 +245,6 @@ msgstr ""
 "2.7)"
 
 #: ../Doc/whatsnew/3.5.rst:143
-#, fuzzy
 msgid ""
 "HTTP cookie parsing is now stricter, in order to protect against potential "
 "injection attacks. (Contributed by Antoine Pitrou in :issue:`22796`.)"
@@ -297,12 +254,10 @@ msgstr ""
 "`22796`.)"
 
 #: ../Doc/whatsnew/3.5.rst:148
-#, fuzzy
 msgid "Windows improvements:"
 msgstr "Mejoras en Windows:"
 
 #: ../Doc/whatsnew/3.5.rst:150
-#, fuzzy
 msgid ""
 "A new installer for Windows has replaced the old MSI. See :ref:`using-on-"
 "windows` for more information."
@@ -311,7 +266,6 @@ msgstr ""
 "`using-on-windows` para obtener más información."
 
 #: ../Doc/whatsnew/3.5.rst:153
-#, fuzzy
 msgid ""
 "Windows builds now use Microsoft Visual C++ 14.0, and extension modules "
 "should use the same."
@@ -320,7 +274,6 @@ msgstr ""
 "módulos de extensión deberían utilizar lo mismo."
 
 #: ../Doc/whatsnew/3.5.rst:157
-#, fuzzy
 msgid ""
 "Please read on for a comprehensive list of user-facing changes, including "
 "many other smaller improvements, CPython optimizations, deprecations, and "
@@ -328,7 +281,7 @@ msgid ""
 msgstr ""
 "Por favor, siga leyendo para ver una lista completa de los cambios "
 "orientados al usuario, incluyendo muchas otras mejoras menores, "
-"optimizaciones de CPython, desaprobaciones y posibles problemas de "
+"optimizaciones de CPython, elementos obsoletos y posibles problemas de "
 "portabilidad."
 
 #: ../Doc/whatsnew/3.5.rst:163
@@ -336,12 +289,10 @@ msgid "New Features"
 msgstr "Nuevas Funciones"
 
 #: ../Doc/whatsnew/3.5.rst:168
-#, fuzzy
 msgid "PEP 492 - Coroutines with async and await syntax"
-msgstr "PEP 492 - Coroutines con sintaxis async y await"
+msgstr "PEP 492 - Corrutinas con sintaxis async y await"
 
 #: ../Doc/whatsnew/3.5.rst:170
-#, fuzzy
 msgid ""
 ":pep:`492` greatly improves support for asynchronous programming in Python "
 "by adding :term:`awaitable objects <awaitable>`, :term:`coroutine functions "
@@ -350,28 +301,26 @@ msgid ""
 "manager>`."
 msgstr ""
 ":pep:`492` mejora en gran medida el soporte de la programación asíncrona en "
-"Python añadiendo :term:`objetos <awaitable>esperables`, :term:`funciones de "
-"<coroutine function>coroutina`, :term:`iteraciones <asynchronous "
-"iterable>asíncronas` y :term:`gestores de contexto <asynchronous context "
-"manager>asíncronos`.</asynchronous></asynchronous></coroutine></awaitable>"
+"Python añadiendo :term:`objetos esperables <awaitable>`, :term:`funciones de "
+"cortina <coroutine function>`, :term:`iteraciones asíncronas <asynchronous "
+"iterable>` y :term:`gestores de contexto asíncronos <asynchronous context "
+"manager>`."
 
 #: ../Doc/whatsnew/3.5.rst:176
-#, fuzzy
 msgid ""
 "Coroutine functions are declared using the new :keyword:`async def` syntax::"
 msgstr ""
-"Las funciones coroutine se declaran utilizando la nueva sintaxis :keyword:"
+"Las funciones corrutina se declaran utilizando la nueva sintaxis :keyword:"
 "`async def`::"
 
 #: ../Doc/whatsnew/3.5.rst:181
-#, fuzzy
 msgid ""
 "Inside a coroutine function, the new :keyword:`await` expression can be used "
 "to suspend coroutine execution until the result is available.  Any object "
 "can be *awaited*, as long as it implements the :term:`awaitable` protocol by "
 "defining the :meth:`__await__` method."
 msgstr ""
-"Dentro de una función de coroutina, la nueva expresión :keyword:`await` "
+"Dentro de una función de corrutina, la nueva expresión :keyword:`await` "
 "puede utilizarse para suspender la ejecución de la coroutina hasta que el "
 "resultado esté disponible.  Cualquier objeto puede ser *esperado*, siempre "
 "que implemente el protocolo :term:`awaitable` definiendo el método :meth:"
