added the dictionary and a few more corrections

--- a/whatsnew/3.5.po
+++ b/whatsnew/3.5.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2021-07-31 09:38+0100\n"
+"PO-Revision-Date: 2021-08-01 21:54+0100\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -327,22 +327,19 @@ msgstr ""
 "`__await__`."
 
 #: ../Doc/whatsnew/3.5.rst:186
-#, fuzzy
 msgid ""
 "PEP 492 also adds :keyword:`async for` statement for convenient iteration "
 "over asynchronous iterables."
 msgstr ""
-"PEP 492 también añade la sentencia :keyword:`async for` para una cómoda "
+"PEP 492 también añade la expresión :keyword:`async for` para una cómoda "
 "iteración sobre iterables asíncronos."
 
 #: ../Doc/whatsnew/3.5.rst:189
-#, fuzzy
 msgid "An example of a rudimentary HTTP client written using the new syntax::"
 msgstr ""
 "Un ejemplo de un cliente HTTP rudimentario escrito con la nueva sintaxis::"
 
 #: ../Doc/whatsnew/3.5.rst:215
-#, fuzzy
 msgid ""
 "Similarly to asynchronous iteration, there is a new syntax for asynchronous "
 "context managers.  The following script::"
@@ -351,64 +348,55 @@ msgstr ""
 "los gestores de contexto asíncronos.  El siguiente script::"
 
 #: ../Doc/whatsnew/3.5.rst:235
-#, fuzzy
 msgid "will output::"
 msgstr "dará como resultado::"
 
 #: ../Doc/whatsnew/3.5.rst:244
-#, fuzzy
 msgid ""
 "Note that both :keyword:`async for` and :keyword:`async with` can only be "
 "used inside a coroutine function declared with :keyword:`async def`."
 msgstr ""
 "Tenga en cuenta que tanto :keyword:`async for` como :keyword:`async with` "
-"sólo pueden usarse dentro de una función coroutine declarada con :keyword:"
+"sólo pueden usarse dentro de una función corrutina declarada con :keyword:"
 "`async def`."
 
 #: ../Doc/whatsnew/3.5.rst:247
-#, fuzzy
 msgid ""
 "Coroutine functions are intended to be run inside a compatible event loop, "
 "such as the :ref:`asyncio loop <asyncio-event-loop>`."
 msgstr ""
-"Las funciones coroutine están pensadas para ser ejecutadas dentro de un "
+"Las funciones corrutina están pensadas para ser ejecutadas dentro de un "
 "bucle de eventos compatible, como el bucle :ref: <asyncio-event-"
-"loop>`asyncio`.</asyncio-event-loop>"
+"loop>`asyncio`."
 
 #: ../Doc/whatsnew/3.5.rst:253
-#, fuzzy
 msgid ""
 "Starting with CPython 3.5.2, ``__aiter__`` can directly return :term:"
 "`asynchronous iterators <asynchronous iterator>`.  Returning an :term:"
 "`awaitable` object will result in a :exc:`PendingDeprecationWarning`."
 msgstr ""
 "A partir de CPython 3.5.2, ``__aiter__`` puede devolver directamente :term:"
-"`iteradores asíncronos` <asynchronous iterator>.  Devolver un objeto :term:"
-"`awaitable` resultará en un :exc:`PendingDeprecationWarning`.</asynchronous>"
+"`iteradores asíncronos<asynchronous iterator>` .  Devolver un objeto :term:"
+"`awaitable` resultará en un :exc:`PendingDeprecationWarning`."
 
 #: ../Doc/whatsnew/3.5.rst:259
-#, fuzzy
 msgid "See more details in the :ref:`async-iterators` documentation section."
 msgstr ""
-"Ver más detalles en la sección de documentación :ref:`async-iterators`."
+"Ver más detalles en la sección de la documentación :ref:`async-iterators`."
 
 #: ../Doc/whatsnew/3.5.rst:265
-#, fuzzy
 msgid ":pep:`492` -- Coroutines with async and await syntax"
-msgstr ":pep:`492` -- Coroutines con sintaxis async y await"
+msgstr ":pep:`492` -- Corrutinas con sintaxis async y await"
 
 #: ../Doc/whatsnew/3.5.rst:266
-#, fuzzy
 msgid "PEP written and implemented by Yury Selivanov."
 msgstr "PEP escrito e implementado por Yury Selivanov."
 
 #: ../Doc/whatsnew/3.5.rst:272
-#, fuzzy
 msgid "PEP 465 - A dedicated infix operator for matrix multiplication"
 msgstr "PEP 465 - Un operador infijo dedicado a la multiplicación de matrices"
 
 #: ../Doc/whatsnew/3.5.rst:274
-#, fuzzy
 msgid ""
 ":pep:`465` adds the ``@`` infix operator for matrix multiplication. "
 "Currently, no builtin Python types implement the new operator, however, it "
@@ -418,14 +406,13 @@ msgid ""
 "methods defining other infix arithmetic operators."
 msgstr ""
 ":pep:`465` añade el operador infijo ``@` para la multiplicación de matrices. "
-"Actualmente, ningún tipo de Python implementa el nuevo operador, sin "
-"embargo, puede implementarse definiendo :meth:`__matmul__`, :meth:"
+"Actualmente, ningún tipo integrado de Python implementa el nuevo operador, "
+"sin embargo, puede implementarse definiendo :meth:`__matmul__`, :meth:"
 "`__rmatmul__`, y :meth:`__imatmul__` para la multiplicación de matrices "
-"regular, reflejada y en el lugar.  La semántica de estos métodos es similar "
-"a la de los métodos que definen otros operadores aritméticos infijos."
+"regular, reflejada y *in-place*.  La semántica de estos métodos es similar a "
+"la de los métodos que definen otros operadores aritméticos infijos."
 
 #: ../Doc/whatsnew/3.5.rst:281
-#, fuzzy
 msgid ""
 "Matrix multiplication is a notably common operation in many fields of "
 "mathematics, science, engineering, and the addition of ``@`` allows writing "
@@ -436,34 +423,28 @@ msgstr ""
 "permite escribir un código más limpio::"
 
 #: ../Doc/whatsnew/3.5.rst:287
-#, fuzzy
 msgid "instead of::"
 msgstr "en lugar de::"
 
 #: ../Doc/whatsnew/3.5.rst:292
-#, fuzzy
 msgid "NumPy 1.10 has support for the new operator::"
 msgstr "NumPy 1.10 tiene soporte para el nuevo operador::"
 
 #: ../Doc/whatsnew/3.5.rst:312
-#, fuzzy
 msgid ":pep:`465` -- A dedicated infix operator for matrix multiplication"
 msgstr ""
 ":pep:`465` -- Un operador infijo dedicado a la multiplicación de matrices"
 
 #: ../Doc/whatsnew/3.5.rst:313
-#, fuzzy
 msgid "PEP written by Nathaniel J. Smith; implemented by Benjamin Peterson."
 msgstr ""
 "PEP escrito por Nathaniel J. Smith; implementado por Benjamin Peterson."
 
 #: ../Doc/whatsnew/3.5.rst:319
-#, fuzzy
 msgid "PEP 448 - Additional Unpacking Generalizations"
-msgstr "PEP 448 - Generalizaciones adicionales de desembalaje"
+msgstr "PEP 448 - Generalizaciones adicionales de desempaquetado"
 
 #: ../Doc/whatsnew/3.5.rst:321
-#, fuzzy
 msgid ""
 ":pep:`448` extends the allowed uses of the ``*`` iterable unpacking operator "
 "and ``**`` dictionary unpacking operator.  It is now possible to use an "
@@ -472,7 +453,7 @@ msgstr ""
 ":pep:`448` amplía los usos permitidos del operador de desempaquetado de "
 "iterables ``*` y del operador de desempaquetado de diccionarios ``**`.  "
 "Ahora es posible utilizar un número arbitrario de desempaquetados en las "
-"llamadas a funciones de :ref: <calls>`::</calls>"
+"llamadas a funciones de :ref: <calls>`::"
 
 #: ../Doc/whatsnew/3.5.rst:335
 #, fuzzy
@@ -530,7 +511,6 @@ msgstr ""
 "ser una mezcla de texto binario y compatible con ASCII."
 
 #: ../Doc/whatsnew/3.5.rst:373 ../Doc/whatsnew/3.5.rst:1848
-#, fuzzy
 msgid "Examples::"
 msgstr "Ejemplos::"
 
@@ -568,12 +548,10 @@ msgstr ""
 "Furman."
 
 #: ../Doc/whatsnew/3.5.rst:405
-#, fuzzy
 msgid "PEP 484 - Type Hints"
-msgstr "PEP 484 - Sugerencias de tipo"
+msgstr "PEP 484 - Anotaciones de tirado"
 
 #: ../Doc/whatsnew/3.5.rst:407
-#, fuzzy
 msgid ""
 "Function annotation syntax has been a Python feature since version 3.0 (:pep:"
 "`3107`), however the semantics of annotations has been left undefined."
@@ -655,7 +633,6 @@ msgid ":pep:`484` -- Type Hints"
 msgstr ":pep:`484` -- Consejos de tipo"
 
 #: ../Doc/whatsnew/3.5.rst:439
-#, fuzzy
 msgid ""
 "PEP written by Guido van Rossum, Jukka Lehtosalo, and Łukasz Langa; "
 "implemented by Guido van Rossum."
@@ -1522,7 +1499,6 @@ msgstr ""
 "por A. Jesse Jiryu Davis.)"
 
 #: ../Doc/whatsnew/3.5.rst:871
-#, fuzzy
 msgid "bz2"
 msgstr "bz2"
 
@@ -1539,7 +1515,6 @@ msgstr ""
 "en :issue:`15955`.)"
 
 #: ../Doc/whatsnew/3.5.rst:879
-#, fuzzy
 msgid "cgi"
 msgstr "cgi"
 
@@ -4982,7 +4957,6 @@ msgstr ""
 "`functools.partial`. (Contribuido por Alexander Belopolsky en :issue:`7830`.)"
 
 #: ../Doc/whatsnew/3.5.rst:2513
-#, fuzzy
 msgid "Changes in the C API"
 msgstr "Cambios en la API de C"
 
